<resources>
    <string name="app_name">Matrix Calculator</string>
    <string name="matrA">Matrix A</string>
    <string name="matrB">Matrix B</string>
    <string name="set">Set</string>
    <string name="rows">Rows</string>
    <string name="cols">Cols</string>
    <string name="result">Result C:</string>

    <!--Operation button strings-->
    <string name="add">A + B</string>
    <string name="subtract">A - B</string>
    <string name="subtract2">B - A</string>
    <string name="multiply">A * B</string>
    <string name="multiply2">B * A</string>

    <string name="swap1">Swap A B</string>
    <string name="swap2">Swap B C</string>
    <string name="swap3">Swap A C</string>
    <string name="inv">Inverse</string>
    <string name="trans">Transpose</string>
    <string name="scalar">Scale</string>

    <string name="det">Determinant</string>
    <string name="rank">Rank</string>


    <!-- Error strings-->
    <string name="sizeInvalid">Matrix size invalid.</string>
    <string name="wrongSize">Matrices must be of the same size to perform this operation.</string>
    <string name="mulFail">Columns of matrix 1 should equal rows of matrix 2.</string>
    <string name="missingCells">Fill in all cells before performing an operation.</string>



</resources>
